trunk/Archive2/75/a402daef5fda92/output
main.cpp: In function 'bool FindRep(std::string&)':
main.cpp:78:23: error: expected unqualified-id before numeric constant
     int sPos,sLen = 0,1;
                       ^
